@@ -1281,7 +1281,9 @@ module Druid
      :h4s,
      :h5s,
      :h6s,
-     :paragraphs].each do |method_name|
+     :paragraphs,
+     :labels,
+     :file_fields].each do |method_name|
       define_method(method_name) do |name, identifier, &block|
         define_method("#{name}_elements") do
           return call_block(&block) if block_given?
